--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "next": "15.1.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.4.0"
+    "react-icons": "^5.4.0",
+    "wavesurfer.js": "^7.8.16"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
