--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google-cloud/storage": "^7.15.0",
     "@heroui/dropdown": "^2.3.9",
     "@heroui/react": "^2.6.13",
     "@heroui/system": "^2.4.6",
@@ -17,6 +18,7 @@
     "framer-motion": "^11.18.1",
     "next": "15.1.5",
     "openai": "^4.79.1",
+    "playwright": "^1.49.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0"
