--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@heroui/theme": "^2.4.5",
     "@next/font": "^14.2.15",
     "framer-motion": "^11.18.1",
+    "mongodb": "^6.12.0",
     "next": "15.1.5",
     "openai": "^4.79.1",
     "playwright": "^1.49.1",
