--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "uuid": "^11.0.5",
     "wavesurfer.js": "^7.8.16"
   },
   "devDependencies": {
