--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@heroui/system": "^2.4.6",
     "@heroui/theme": "^2.4.5",
     "@next/font": "^14.2.15",
+    "ethers": "^6.13.5",
     "framer-motion": "^11.18.1",
     "mongodb": "^6.12.0",
     "next": "15.1.5",
@@ -23,6 +24,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "starknet": "^6.11.0",
     "uottahack7": "file:",
     "uuid": "^11.0.5",
     "wavesurfer.js": "^7.8.16"
